# SEWS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  README_it.md  get_metrics.sh  sews
.github/: ci.yml
examples/: generate_metrics.sh
src/: http_handler.c  http_handler.h  http_server.h  main.c  metrics.c  metrics.h  server.c  server.h  utils.c  utils.h  websocket.c  websocket.h
tests/: test_main.c
www/: index.html  index2.html  process.html
www/css/: style.css
www/js/: script.js  websocket.js
